--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@ body{
 
 .box{
     display: flex;
-    width: 710px;
-    height: 280px;
+    width: 730px;
+    height: 285px;
     flex-direction: row;
     margin-left:auto;
     margin-right: auto;
@@ -76,7 +76,7 @@ body{
     margin: 2.5em;
 }
 .description-info{
-  font-size:22px;
+  font-size:1.4em;
   font-family: var(--font-family);
   font-weight: 700;
   color:var(--VeryDarkGrayishBlue);
@@ -100,6 +100,7 @@ body{
     color: var(--VeryDarkGrayishBlue);
     font-size: 13px;
     font-weight: 700;
+    padding-top: 0.5em;
 }
 .user-data_date{
    font-family: var(--font-family);
